# docx-report-engine

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: publish-image.yml
docs/: TEMPLATE_CONTRACT.md
docx_builder/: __init__.py  __main__.py  anchors.py  cli.py  expansion.py  md_parser.py  mermaid_common.py  mermaid_render.py  render.py  schema.py  split_assemble.py  template_tools.py
skills/jinjify-template/: SKILL.md
