[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docx-report-engine"
version = "0.1.0"
description = "Markdown-dialect report engine: WYSIWYG-friendly .md drafts compiled into organisation DOCX templates (docxtpl + OOXML post-processing)"
requires-python = ">=3.11"
dependencies = [
    "clize>=5.0.0",
    "docxtpl>=0.16.0",
    "python-docx>=1.0.0",
    "lxml>=5.0.0",
    "jinja2>=3.1.0",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "pyyaml>=6.0",
]

[tool.setuptools]
packages = ["docx_builder"]
